[gd_scene load_steps=3 format=3 uid="uid://cey4wjam18cii"]

[ext_resource type="PackedScene" uid="uid://dyn2qf6aui3uv" path="res://Game_User_Interface/UI_Background.tscn" id="1_6amtt"]
[ext_resource type="Script" uid="uid://d2nd3w5upjk8a" path="res://User_Profile_L/main.gd" id="1_8hsud"]

[node name="UserProfileSelect" type="CanvasLayer"]
script = ExtResource("1_8hsud")

[node name="Background" parent="." instance=ExtResource("1_6amtt")]

[node name="OptionSelectUser" type="OptionButton" parent="."]
anchors_preset = -1
anchor_left = 0.0989583
anchor_top = -0.109568
anchor_right = 0.229167
anchor_bottom = -0.0478395
offset_left = 646.0
offset_top = 264.0
offset_right = 870.0
offset_bottom = 304.0
metadata/_edit_use_anchors_ = true

[node name="SelectUser" type="Button" parent="."]
anchors_preset = -1
anchor_top = -0.0509259
anchor_right = 0.0694444
offset_left = 761.0
offset_top = 141.0
offset_right = 876.0
offset_bottom = 179.0
text = "Select User
"
metadata/_edit_use_anchors_ = true

[node name="CreateNewUser" type="Button" parent="."]
anchors_preset = -1
anchor_top = -0.0509259
anchor_right = 0.223958
offset_left = 760.0
offset_top = 326.0
offset_right = 875.0
offset_bottom = 364.0
text = "Add User"
metadata/_edit_use_anchors_ = true

[node name="RemoveUser" type="Button" parent="."]
anchors_preset = -1
anchor_left = -0.0407986
anchor_top = -0.0462963
anchor_bottom = 0.00771605
offset_left = 1014.0
offset_top = 137.0
offset_right = 1129.0
offset_bottom = 175.0
text = "Remove User
"
metadata/_edit_use_anchors_ = true

[connection signal="pressed" from="SelectUser" to="." method="_on_select_user_pressed"]
[connection signal="pressed" from="CreateNewUser" to="." method="_on_create_new_user_pressed"]
